Config file being written to actually exists now oops

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,9 @@ jobs:
         docker push ojhdev/portfolio:latest
 
     - name: Decode kubeconfig
-      run: echo "${{ secrets.KUBECONFIG_B64 }}" | base64 -d > $HOME/.kube/config
+      run: |
+        mkdir -p $HOME/.kube
+        echo "${{ secrets.KUBECONFIG_B64 }}" | base64 -d > $HOME/.kube/config
 
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
