Update package installation

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,9 +30,12 @@ jobs:
         mkdir -p $HOME/.kube
         echo "${{ secrets.KUBECONFIG_B64 }}" | base64 -d > $HOME/.kube/config
         
-    - name: Install gke-gcloud-auth-plugin
+    - name: Install Google Cloud SDK and GKE Auth Plugin
       run: |
-        sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+        sudo apt-get install -y apt-transport-https ca-certificates gnupg
+        sudo apt-get update && sudo apt-get install -y google-cloud-sdk
+        gcloud components install gke-gcloud-auth-plugin --quiet
 
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
