--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,6 +40,11 @@ jobs:
     - name: Install gke-gcloud-auth-plugin
       run: sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
 
+    - name: Verify gke-gcloud-auth-plugin
+      run: |
+        which gke-gcloud-auth-plugin || echo "Plugin not found in PATH"
+        gke-gcloud-auth-plugin --version || echo "Unable to get plugin version"
+
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
       with:
