Checking path of plugin

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,12 @@ jobs:
         which gke-gcloud-auth-plugin || echo "Plugin not found in PATH"
         gke-gcloud-auth-plugin --version || echo "Unable to get plugin version"
 
+    - name: Ensure gke-gcloud-auth-plugin in PATH
+      run: |
+        export PATH=$PATH:/usr/lib/google-cloud-sdk/bin
+        which gke-gcloud-auth-plugin
+        gke-gcloud-auth-plugin --version
+
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
       with:
