--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,7 +38,10 @@ jobs:
         sudo apt-get update
 
     - name: Install gke-gcloud-auth-plugin
-      run: sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+      run: |
+        gcloud components install gke-gcloud-auth-plugin -q
+        gcloud config set container/use_application_default_credentials true
+
 
     - name: Verify gke-gcloud-auth-plugin
       run: |
