--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -31,10 +31,9 @@ kind: Service
 metadata:
   name: portfolio-service
 spec:
-  type: NodePort
-  selector:
-    app: portfolio
+  type: LoadBalancer
   ports:
     - port: 3000
       targetPort: 3000
-      nodePort: 30001
+  selector:
+    app: portfolio
